commit -7 alignment correction in css file

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   color: white;
 }
 
-
 .displayTable {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -20,5 +19,5 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  width: 30em
+  width: 30em;
 }
